# proctor_schedule

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
data/interim/: building_abbreviations.csv
data/raw/: building_abbreviations_index.htm
src/proctor_schedule/: config.py  dataset.py  get_building_abbreviations.py  make_calendar.py  plots.py
